AKS/userprofile-app.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: tripviewer
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: tripviewer
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
spec:
  selector:
    app: userprofile
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: userprofile 
  name: userprofile
spec:
  containers:
  - env:
    - name: OPENAPI_DOCS_URI
      value: http://changeme
    image: registrybeg6109.azurecr.io/userprofile:v1
    imagePullPolicy: IfNotPresent
    name: userprofile
    volumeMounts:
      - name: sql-password
        mountPath: "/secrets"
        readOnly: true
    resources:
      limits:
        cpu: 500m
        memory: 250Mi
      requests:
        cpu: 100m
        memory: 50Mi
    ports:
      - containerPort: 80
  volumes:
    - name: sql-password
      secret:
        secretName: sql-password
  dnsPolicy: ClusterFirst
  restartPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: tripviewer 
  name: tripviewer
spec:
  containers:
  - env:
    - name: TRIPS_API_ENDPOINT
      value: http://trips.default.svc.cluster.local
    - name: USERPROFILE_API_ENDPOINT
      value: http://userprofile.default.svc.cluster.local
    image: registrybeg6109.azurecr.io/tripviewer:v1
    imagePullPolicy: IfNotPresent
    name: tripsviewer
    resources:
      limits:
        cpu: 500m
        memory: 250Mi
      requests:
        cpu: 100m
        memory: 50Mi
    ports:
      - containerPort: 80
  dnsPolicy: ClusterFirst
  restartPolicy: Always
