AKS/networkpolicy-api.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: backend-policy
  namespace: api
spec:
  podSelector:
    matchLabels:
      role: backend
  ingress:
   - from:     
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            role: blah
  # egress: 
  #  - to:
  #    - namespaceSelector:
  #        matchLabels:
  #          role: frontend
